--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.0.6",
     "axios": "^1.8.4",
     "botly": "^1.6.2",
     "dotenv": "^16.4.7",
